Fix: Naudojamas tas pats InstantDB URL kaip expenses.html

--- a/templates/login.html
+++ b/templates/login.html
@@ -78,8 +78,8 @@
 </div>
 
 <script type="module">
-    // Import InstantDB
-    import { init } from 'https://www.unpkg.com/@instantdb/core@0.14.3/dist/module/index.js';
+    // Import InstantDB (same URL as expenses.html - works!)
+    import { init } from 'https://js.instantdb.com/v0.14.3/api.js';
     
     // Debug helper - shows status on page
     function debug(msg, isError) {
