--- a/templates/login.html
+++ b/templates/login.html
@@ -53,7 +53,7 @@ function setStatus(msg, type) {
         setStatus('📦 Krauname InstantDB...', 'loading');
         
         // Dynamic import with error catching
-        const { init } = await import('https://js.instantdb.com/v0.14.3/api.js');
+        const { init } = await import('https://esm.sh/@instantdb/core@0.14.31');
         
         setStatus('🔌 Jungiamės prie DB...', 'loading');
         
