Fix: Visi puslapiai naudoja veikiantį esm.sh InstantDB CDN

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -176,7 +176,7 @@
 
     <!-- InstantDB integration for Auth -->
     <script type="module">
-        import { init } from 'https://js.instantdb.com/v0.14.3/api.js';
+        import { init } from 'https://esm.sh/@instantdb/core';
 
         const APP_ID = 'ad4539a9-2114-44bb-a2f4-524d57448deb';
 
