--- a/templates/invoices.html
+++ b/templates/invoices.html
@@ -263,7 +263,7 @@
 
     <!-- InstantDB integration with User Data Isolation -->
     <script type="module">
-      import { init, tx, id } from 'https://js.instantdb.com/v0.14.3/api.js';
+      import { init, tx, id } from 'https://esm.sh/@instantdb/core';
 
       const APP_ID = 'ad4539a9-2114-44bb-a2f4-524d57448deb';
 
